@@ -61,6 +61,7 @@ New in release 3.0.0 (2014-XX-XX):
   - PR2257: clean-extract-nashorn rule is never run
   - PR2329: jamvm parallel unpack failures
   - PR2347: Fix CACAO patches to apply again
+  - PR2348: Avoid following symlinks for CACAO and JamVM patches
   - Don't substitute 'j' for '-j' inside -I directives
   - Extend 8041658 to all files in the HotSpot build.
   - Remove jcheck
